--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "node index.js",
         "dev": "node --watch index.js",
-        "postinstall": "npx playwright install chromium"
+        "postinstall": "npx playwright install --with-deps"
     },
     "dependencies": {
         "cors": "^2.8.5",
