--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "node index.js",
         "dev": "node --watch index.js",
-        "postinstall": "npx playwright install --with-deps"
+        "postinstall": "npx playwright install chromium"
     },
     "dependencies": {
         "cors": "^2.8.5",
@@ -17,6 +17,6 @@
         "@supabase/supabase-js": "^2.39.0"
     },
     "engines": {
-        "node": ">=18.0.0"
+        "node": "18.x"
     }
 }
