--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
         "postinstall": "npx playwright install chromium"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.39.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "playwright": "^1.40.0",
-        "@supabase/supabase-js": "^2.39.0"
+        "jsonwebtoken": "^9.0.3",
+        "playwright": "^1.40.0"
     },
     "engines": {
         "node": "18.x"
