--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
         "jsonwebtoken": "^9.0.3",
-        "playwright": "^1.40.0"
+        "playwright": "^1.58.0",
+        "zod": "^4.3.6"
     },
     "engines": {
         "node": ">=20"
