--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.6.1",
         "express": "^4.18.2",
         "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.3",
         "playwright": "^1.58.0",
         "zod": "^4.3.6"
