CI/CD Deployment Update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ env:
   ECS_CLUSTER: ux-audit-cluster          # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: backend/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: backend-container           # set this to the name of the container in the
+  CONTAINER_NAME: backend           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
