--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.3",
         "playwright": "^1.58.0",
+        "posthog-node": "^5.24.15",
         "zod": "^4.3.6"
     },
     "engines": {
