--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.21.0",
+        "@sparticuz/chromium": "^143.0.4",
         "@supabase/supabase-js": "^2.39.0",
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
@@ -18,7 +19,7 @@
         "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.3",
-        "playwright": "^1.58.0",
+        "playwright-core": "^1.58.2",
         "posthog-node": "^5.24.15",
         "zod": "^4.3.6"
     },
