--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,9 @@ FROM mcr.microsoft.com/playwright:v1.42.1-jammy
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+# --ignore-scripts skips postinstall (which downloads Playwright browsers)
+# The base image already has Chromium — no need to re-download
+RUN npm install --ignore-scripts
 
 COPY . .
 
