--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "http://ux-audit-alb-1605700393.us-east-1.elb.amazonaws.com/api/$1"
+            "dest": "https://ux-audit.onrender.com/api/$1"
         },
         {
             "handle": "filesystem"
