--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "jsonwebtoken": "^9.0.3",
         "playwright": "^1.58.0",
         "posthog-node": "^5.24.15",
+        "resend": "^6.9.2",
         "zod": "^4.3.6"
     },
     "engines": {
