--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,8 @@
     "framework": null,
     "buildCommand": null,
     "outputDirectory": "frontend",
+    "cleanUrls": true,
+    "trailingSlash": false,
     "routes": [
         {
             "src": "/api/(.*)",
