--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,10 @@
     "framework": null,
     "buildCommand": null,
     "outputDirectory": "frontend",
-    "cleanUrls": true,
-    "trailingSlash": false,
-    "rewrites": [
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "https://ux-audit.onrender.com/api/$1"
+            "src": "/api/(.*)",
+            "dest": "https://ux-audit.onrender.com/api/$1"
         }
     ]
 }
